# Agent-Patrol

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: default_policy.yaml  strict_policy.yaml
docs/: architecture.md  evaluation.md  limitations.md  policy_design.md  threat_model.md
examples/: eval_scenarios.json  prompt_injection_task.json  report.txt  risky_email_task.json  safe_task.json  shell_delete_task.json  sql_injection_task.json
scripts/: replay_trace.py  run_demo.py  run_eval.py  seed_demo_db.py
src/agentpatrol/: __init__.py  agent.py  api.py  cli.py  config.py  database.py  decisions.py  detectors.py  evaluator.py  policy.py  registry.py  runtime.py  tool.py  trace.py  validators.py
src/agentpatrol/policies/: __init__.py  base.py  calendar_policy.py  email_policy.py  file_policy.py  pii_policy.py  rate_limit_policy.py  shell_policy.py  sql_policy.py
src/agentpatrol/static/: dashboard.html
src/agentpatrol/tools/: __init__.py  calculator.py  calendar_tools.py  email_tools.py  file_tools.py  shell_tools.py  sql_tools.py
tests/: conftest.py  test_api.py  test_email_policy.py  test_evaluator.py  test_policy_engine.py  test_schema_validation.py  test_shell_policy.py  test_sql_policy.py  test_tool_registry.py  test_trace_logger.py
