[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-patrol"
version = "0.1.0"
description = "A validation and policy layer between tool-using AI agents and their tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai-agents", "guardrails", "policy", "tool-use", "evaluation"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "httpx>=0.27",
]

[project.scripts]
agentpatrol = "agentpatrol.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentpatrol"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
